--- a/css/page-1.css
+++ b/css/page-1.css
@@ -36,7 +36,7 @@ a {
 }
 
 .post-img {
-	height: 300px;
+	width: 100%;
 	display: block;
 	margin: auto;
 	/* width: 100%; */
@@ -68,7 +68,7 @@ a {
 
 .related-post-card-text {
 	padding: 1em;
-	border: 1px solid blue;
+	/* border: 1px solid blue; */
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -83,17 +83,17 @@ a {
 @media (max-width: 799px) {
 	.container {
 		display: grid;
-		grid-template-columns: repeat(4, 1fr);
+		grid-template-columns: fr;
 		grid-template-rows: auto auto 1fr auto 1fr auto 1fr;
 		grid-template-areas:
-			'nv nv nv nv'
-			'cover cover cover cover'
-			'hd hd hd sb'
-			'. . . sb'
-			'txt txt txt sb'
-			'rl rl rl rl'
-			'ft ft ft ft';
-		width: 90%;
+			'nv'
+			'cover'
+			'hd'
+			'.'
+			'txt'
+			'rl'
+			'ft';
+		/* width: 95%; */
 		height: 100vh;
 		margin: auto;
 	}
@@ -113,12 +113,15 @@ a {
 		flex-direction: column;
 		justify-content: space-evenly;
 		flex-wrap: wrap;
-		margin: 0.2em 2em 0em 2em;
 		padding: 1em;
 		background-color: #fefefe;
 		box-shadow: 1px 2px 5px #bbb;
 		/* border: 1px solid red; */
 	}
+
+	/* .box {
+		border: 1px solid red;
+	} */
 
 	.related-posts-container {
 		grid-area: rl;
